Refactor OAuth authorization changes
 - Use different logic to update UserInfoTokenServices with the CF Data Flow authorities extractor when the appropriate conditions are met
 - Inject necessary properties for CloudFoundrySecurityService
 - Set cf-use-uaa to `true` by default
 - Update doc

--- a/spring-cloud-dataflow-server-cloudfoundry/src/main/resources/dataflow-server.yml
+++ b/spring-cloud-dataflow-server-cloudfoundry/src/main/resources/dataflow-server.yml
@@ -34,7 +34,7 @@ spring:
           apiTimeout: 360
     dataflow:
       security:
-        cf-use-uaa: false
+        cf-use-uaa: true
 
 #
 # If you prefer to use Eureka to locate the Config Server, you can do that by setting
